--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,13 +1,18 @@
 
-      .login-form {
-        max-width: 300px;
-      }
+.login-form {
+  max-width: 300px;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 25%;
+}
 
-      .login-form-forgot {
-        float: right;
-      }
+.login-form-forgot {
+  float: right;
+}
 
-      .login-form-button {
-        width: 100%;
-      }
+.login-form-button {
+  max-width: 300px;
+  width: 100%;
+}
     
