login user type checking 1 is not allow 2 is admin

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -21,6 +21,14 @@
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
+    
+          
+          <nz-form-explain *ngIf="isNotAdmin"
+            >Your Acount is not allow to access!</nz-form-explain
+          >
+       
+      </nz-form-item>
+      <nz-form-item>
         <nz-form-control>
    
           <button nz-button class="login-form-button" [nzType]="'primary'">Log in</button>
