--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,12 @@
 
     <nz-layout class="wrapper">
       <nz-sider nzCollapsible [(nzCollapsed)]="isCollapsed" [nzTrigger]="triggerTemplate">
-        <div class="logo"></div>
+        <div class="logo"><a [routerLink]="['/m',{outlets: {dashboard:['index']}}]">Index</a></div>
         <ul nz-menu [nzTheme]="'dark'" [nzMode]="'inline'" [nzInlineCollapsed]="isCollapsed">
           <li nz-submenu>
             <span title><i nz-icon type="user"></i><span class="nav-text">User</span></span>
             <ul>
-              <li nz-menu-item>Tom</li>
+              <li nz-menu-item><a [routerLink]="['/m',{outlets: {dashboard:['user']}}]">User List</a></li>
               <li nz-menu-item>Bill</li>
               <li nz-menu-item>Alex</li>
             </ul>
@@ -24,16 +24,8 @@
         </ul>
       </nz-sider>
       <nz-layout>
-        <app-header [isCollapsed]=isCollapsed (handleCollapsed)="handleCollapsed()"></app-header>
-        <nz-content style="margin:0 16px;">
-          <nz-breadcrumb style="margin:16px 0;">
-            <nz-breadcrumb-item>User</nz-breadcrumb-item>
-            <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
-          </nz-breadcrumb>
-          <div style="padding:24px; background: #fff; min-height: 360px;">
-            Bill is a cat.
-          </div>
-        </nz-content>
+        <app-header [isCollapsed]=isCollapsed (handleCollapsed)="handleCollapsed()" [ngClass]="!isCollapsed? 'app_header open' : 'app_header close'"></app-header>
+          <router-outlet name="dashboard"></router-outlet>
         <nz-footer style="text-align: center;">Ant Design ©2019 Implement By Angular</nz-footer>
       </nz-layout>
     </nz-layout>
