login field disable after post form

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group [nzPrefix]="prefixUser">
-            <input type="text" nz-input formControlName="userName" [attr.disabled]="loading||null" placeholder="Username" />
+            <input type="text" nz-input formControlName="userName" placeholder="Username" />
           </nz-input-group>
           <nz-form-explain *ngIf="validateForm.get('userName')?.dirty && validateForm.get('userName')?.errors"
             >Please input your username!</nz-form-explain
@@ -13,7 +13,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group [nzPrefix]="prefixLock">
-            <input type="password" nz-input formControlName="password" [attr.disabled]="loading||null" placeholder="Password" />
+            <input type="password" nz-input formControlName="password" placeholder="Password" />
           </nz-input-group>
           <nz-form-explain *ngIf="validateForm.get('password')?.dirty && validateForm.get('password')?.errors"
             >Please input your Password!</nz-form-explain
